# observationSim

./: .cvsignore  CMakeLists.txt  ChangeLog  SConscript  azure-pipelines.yml  observationSimLib.py
cmt/: requirements
data/: ft1.tpl  ft2.tpl  obsSim.par
doc/: .cvsignore  Doxyfile  release.notes  results.ps
observationSim/: Container.h  ContainerBase.h  Event.h  EventContainer.h  FitsTable.h  Roi.h  ScData.h  ScDataContainer.h  Simulator.h  Spacecraft.h
pfiles/: gtobssim.par  gtorbsim.par  obsSim.par  orbSim.par
python/: latSim.py  observationSim.i  test.py
src/: Container.cxx  ContainerBase.cxx  EgretSc.cxx  EgretSc.h  EventContainer.cxx  FitsTable.cxx  GaussianSource.cxx  GaussianSource.h  Isotropic.cxx  Isotropic.h  LatSc.cxx  LatSc.h  MapSource.cxx  MapSource.h  PeriodicSource.cxx  PeriodicSource.h  Pulsar.cxx  Pulsar.h  Roi.cxx  ScDataContainer.cxx  SimpleTransient.cxx  SimpleTransient.h  Simulator.cxx  TransientTemplate.cxx  TransientTemplate.h  Verbosity.cxx  Verbosity.h  mainpage.h  observationSim.cxx
src/obsSim/: obsSim.cxx
src/orbSim/: orbSim.cxx
src/test/: .cvsignore  exposureMap.cxx  main.cxx  obsSim.cxx  testGoodiRead.cxx
xml/: 3EG_catalog.txt  3EG_catalog_20-1e6MeV.xml  3EG_catalog_30MeV.xml  3EG_catalog_32MeV.xml  3EG_to_xml.py  bpl_source.py  obsSim_source_library.xml  source_library.xml  test_sources.xml  time_source.xml
